@@ -30,7 +30,7 @@ import java.io.IOException;
 /*
  * @test id=passive
  * @key stress
- * @library /
+ * @library / /test/lib
  * @requires vm.gc.Shenandoah
  * @requires vm.flavor == "server"
  * @summary Stress the Shenandoah GC by trying to make old objects more likely to be garbage than young objects.
@@ -49,7 +49,7 @@ import java.io.IOException;
 /*
  * @test id=aggressive
  * @key stress
- * @library /
+ * @library / /test/lib
  * @requires vm.gc.Shenandoah
  * @requires vm.flavor == "server"
  * @summary Stress the Shenandoah GC by trying to make old objects more likely to be garbage than young objects.
@@ -66,13 +66,18 @@ import java.io.IOException;
  *
  * @run main/othervm/timeout=200 -Xlog:gc*=info -Xmx1g -XX:+UnlockDiagnosticVMOptions -XX:+UnlockExperimentalVMOptions
  *      -XX:+UseShenandoahGC -XX:ShenandoahGCHeuristics=aggressive
+ *      -XX:ShenandoahPinRegionRate=1000
+ *      gc.stress.gcbasher.TestGCBasherWithShenandoah 120000
+ *
+ * @run main/othervm/timeout=200 -Xlog:gc*=info -Xmx1g -XX:+UnlockDiagnosticVMOptions -XX:+UnlockExperimentalVMOptions
+ *      -XX:+UseShenandoahGC -XX:ShenandoahGCHeuristics=aggressive
  *      gc.stress.gcbasher.TestGCBasherWithShenandoah 120000
  */
 
 /*
  * @test id=adaptive
  * @key stress
- * @library /
+ * @library / /test/lib
  * @requires vm.gc.Shenandoah
  * @requires vm.flavor == "server"
  * @summary Stress the Shenandoah GC by trying to make old objects more likely to be garbage than young objects.
@@ -90,7 +95,7 @@ import java.io.IOException;
 /*
  * @test id=compact
  * @key stress
- * @library /
+ * @library / /test/lib
  * @requires vm.gc.Shenandoah
  * @requires vm.flavor == "server" & vm.opt.ClassUnloading != false
  * @summary Stress Shenandoah GC with nmethod barrier forced deoptimization enabled.
@@ -103,7 +108,7 @@ import java.io.IOException;
 /*
  * @test id=passive-deopt-nmethod
  * @key stress
- * @library /
+ * @library / /test/lib
  * @requires vm.gc.Shenandoah
  * @requires vm.flavor == "server" & vm.opt.ClassUnloading != false
  * @summary Stress Shenandoah GC with nmethod barrier forced deoptimization enabled.
@@ -124,7 +129,7 @@ import java.io.IOException;
 /*
  * @test id=aggressive-deopt-nmethod
  * @key stress
- * @library /
+ * @library / /test/lib
  * @requires vm.gc.Shenandoah
  * @requires vm.flavor == "server" & vm.opt.ClassUnloading != false
  * @summary Stress Shenandoah GC with nmethod barrier forced deoptimization enabled.
@@ -144,13 +149,19 @@ import java.io.IOException;
  * @run main/othervm/timeout=200 -Xlog:gc*=info,nmethod+barrier=trace -Xmx1g -XX:+UnlockDiagnosticVMOptions -XX:+UnlockExperimentalVMOptions
  *      -XX:+UseShenandoahGC -XX:ShenandoahGCHeuristics=aggressive
  *      -XX:+DeoptimizeNMethodBarriersALot -XX:-Inline
+ *      -XX:ShenandoahPinRegionRate=1000
+ *      gc.stress.gcbasher.TestGCBasherWithShenandoah 120000
+ *
+ * @run main/othervm/timeout=200 -Xlog:gc*=info,nmethod+barrier=trace -Xmx1g -XX:+UnlockDiagnosticVMOptions -XX:+UnlockExperimentalVMOptions
+ *      -XX:+UseShenandoahGC -XX:ShenandoahGCHeuristics=aggressive
+ *      -XX:+DeoptimizeNMethodBarriersALot -XX:-Inline
  *      gc.stress.gcbasher.TestGCBasherWithShenandoah 120000
  */
 
 /*
  * @test id=adaptive-deopt-nmethod
  * @key stress
- * @library /
+ * @library / /test/lib
  * @requires vm.gc.Shenandoah
  * @requires vm.flavor == "server" & vm.opt.ClassUnloading != false
  * @summary Stress Shenandoah GC with nmethod barrier forced deoptimization enabled.
@@ -170,7 +181,7 @@ import java.io.IOException;
 /*
  * @test id=compact-deopt-nmethod
  * @key stress
- * @library /
+ * @library / /test/lib
  * @requires vm.gc.Shenandoah
  * @requires vm.flavor == "server" & vm.opt.ClassUnloading != false
  * @summary Stress Shenandoah GC with nmethod barrier forced deoptimization enabled.
@@ -183,7 +194,7 @@ import java.io.IOException;
 /*
  * @test id=generational
  * @key stress
- * @library /
+ * @library / /test/lib
  * @requires vm.gc.Shenandoah
  * @requires vm.flavor == "server"
  * @summary Stress the Shenandoah GC by trying to make old objects more likely to be garbage than young objects.
@@ -201,7 +212,7 @@ import java.io.IOException;
  /*
   * @test id=generational-deopt-nmethod
   * @key stress
-  * @library /
+  * @library / /test/lib
   * @requires vm.gc.Shenandoah
   * @requires vm.flavor == "server" & vm.opt.ClassUnloading != false
   * @summary Stress Shenandoah GC with nmethod barrier forced deoptimization enabled.
